--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+DOLLAR_USD_TO_RUPIAH=17000
+
 ##########################################
 # 🖥️ SERVER CONFIG
 ##########################################
