--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# File .env root 
+
+##########################################
+# 💱 CURRENCY
+##########################################
 DOLLAR_USD_TO_RUPIAH=17000
 
 ##########################################
@@ -17,19 +22,60 @@ WATERMARK_FONT=/usr/share/fonts/truetype/dejavu/DejaVuSans-Bold.ttf
 ##########################################
 # 🗄️ DATABASE CONFIG
 ##########################################
+# Digunakan saat runtime (di dalam container)
 DATABASE_URL=postgres://ppv:secret@db:5432/ppv_stream
+# Digunakan saat build (host machine via host.docker.internal)
 DATABASE_URL_BUILD=postgres://ppv:secret@host.docker.internal:5432/ppv_stream
 
 ##########################################
 # 🔐 SECURITY & HLS SETTINGS
 ##########################################
+# Ganti dengan string acak panjang (min 32 chars)
 HMAC_SECRET=change-this-secret-key
 SESSION_TOKEN_TTL=600
 HLS_SEGMENT_SECONDS=6
 
 ##########################################
-# 👩‍💼 BOOTSTRAP ADMIN (optional)
+# 👩‍💼 BOOTSTRAP ADMIN (opsional)
 ##########################################
 ADMIN_BOOTSTRAP_EMAIL=admin@example.com
 ADMIN_BOOTSTRAP_PASSWORD=ChangeMe123!
 ADMIN_BOOTSTRAP_TOKEN=rahasiabanget
+
+##########################################
+# 🔗 X402 SMART CONTRACT (Default: Mega Testnet)
+##########################################
+
+# Alamat kontrak hasil deploy (akan diisi otomatis oleh `make deployx402`)
+X402_CONTRACT_ADDRESS=0xa16bcF1D0Fd77A36ED4e2e0aC73fD36d5c7B3c96
+
+
+# Wallet admin untuk fee split (juga dipakai oleh deployer via mapping -> ADMIN_WALLET)
+X402_ADMIN_WALLET=0xB7256FB6fe96b8aDB4B4280E459fBED02C8db6f0
+
+
+# RPC WebSocket untuk listener/event (dipakai aplikasi Rust)
+X402_RPC_WSS=wss://carrot.megaeth.com/ws
+
+
+# Chain ID aktif
+X402_CHAIN_ID=6342
+
+
+
+##########################################
+# 🚀 DEPLOYER (HANYA untuk `x402-deployer`)
+# Nilai ini dibaca oleh service deployer saat `make deployx402`
+##########################################
+# !!! JANGAN DI-COMMIT KE GIT !!!
+# Gunakan private key hex dengan prefix 0x
+# 🚫 JANGAN DI-COMMIT KE GIT
+# PRIVATE_KEY=# JANGAN di-commit
+
+# Mega Testnet (default)
+MEGA_RPC_HTTP=https://carrot.megaeth.com/rpc
+MEGA_CHAIN_ID=6342
+
+# Polygon Mainnet (opsional)
+# POLYGON_RPC_HTTP=https://polygon-rpc.com
+# POLYGON_CHAIN_ID=137
