--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+ethabi = "18"
+ethereum-types = "0.14"
+ethers-core = "2"
+
+sha3 = "0.10"
+hex = "0.4"
+ethers = { version = "2", features = ["ws", "rustls"] }
+tokio-stream = "0.1"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+once_cell = "1.19"
+anyhow = "1"
+
 # --- Web & HTTP ---
 axum = { version = "0.7", features = ["multipart"] }
 tower-cookies = "0.10"
@@ -22,7 +34,7 @@ sha2 = "0.10"
 base64 = "0.22"
 base64ct = "=1.6.0" # penting: versi ini stabil dengan sha2 v0.10
 regex = "1"
-anyhow = "1"
+
 
 # --- Async & Runtime ---
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net"] }
@@ -32,7 +44,17 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 
 # --- Database ---
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
+
+sqlx = { version = "0.7", features = [
+  "runtime-tokio-rustls",
+  "postgres",
+  "uuid",
+  "time",
+  "macros",
+  "bigdecimal"
+] }
+bigdecimal = "0.4"
+
 
 # --- Env loader untuk seeder & dev ---
 dotenvy = "0.15"
@@ -47,3 +69,7 @@ multiplexing = false
 
 [registries.crates-io]
 protocol = "sparse"
+
+[features]
+x402-watcher = []
+default = []
