--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,44 +6,38 @@ edition = "2021"
 [dependencies]
 ethabi = "18"
 ethereum-types = "0.14"
-ethers-core = "2"
-
 sha3 = "0.10"
 hex = "0.4"
-ethers = { version = "2", features = ["ws", "rustls"] }
+anyhow = "1"        # <— Wajib (dipakai di main.rs, ffmpeg.rs, db.rs, dll)
+once_cell = "1"     # <— Wajib (dipakai untuk cache harga)
+
+
+# ethers v2 — fitur yang valid
+ethers = { version = "2.0.14", default-features = false, features = ["rustls", "ws"] }
+
 tokio-stream = "0.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
-once_cell = "1.19"
-anyhow = "1"
 
-# --- Web & HTTP ---
 axum = { version = "0.7", features = ["multipart"] }
 tower-cookies = "0.10"
 tower-http = { version = "0.5", features = ["fs"] }
 
-# --- Data / Serialize ---
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-# --- Utilities & Hashing ---
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
 argon2 = "0.5"
 hmac = "0.12"
 sha2 = "0.10"
 base64 = "0.22"
-base64ct = "=1.6.0" # penting: versi ini stabil dengan sha2 v0.10
+base64ct = "=1.6.0"
 regex = "1"
 
-
-# --- Async & Runtime ---
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net"] }
 
-# --- Logging ---
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-# --- Database ---
 
 sqlx = { version = "0.7", features = [
   "runtime-tokio-rustls",
@@ -55,20 +49,7 @@ sqlx = { version = "0.7", features = [
 ] }
 bigdecimal = "0.4"
 
-
-# --- Env loader untuk seeder & dev ---
 dotenvy = "0.15"
-
-[net]
-git-fetch-with-cli = true
-retry = 10
-timeout = 600
-
-[http]
-multiplexing = false
-
-[registries.crates-io]
-protocol = "sparse"
 
 [features]
 x402-watcher = []
