--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -8,24 +8,37 @@
 # !!! JANGAN DI-COMMIT KE GIT !!!
 PRIVATE_KEY=
 
-
 # Wallet admin (penerima fee / parameter konstruktor X402Splitter)
 ADMIN_WALLET=0xB7256FB6fe96b8aDB4B4280E459fBED02C8db6f0
 
-# ========== TESTNET: MEGA ==========
+
+# ==========================================
+# ✅ TESTNET: POLYGON AMOY (default aktif)
+# ==========================================
+# Digunakan saat --network polygonAmoyTestnet
+AMOY_RPC_HTTP=https://polygon-amoy-bor.publicnode.com
+AMOY_CHAIN_ID=80002
+
+
+# ==========================================
+# 🧪 (Opsional) TESTNET: MEGA
+# ==========================================
 # Digunakan saat --network megaTestnet
-MEGA_RPC_HTTP=https://carrot.megaeth.com/rpc
-# MEGA_RPC_HTTP=https://rpc2.megaeth.com
-# MEGA_RPC_HTTP=https://6342.rpc.thirdweb.com
-MEGA_CHAIN_ID=6342
+# MEGA_RPC_HTTP=https://carrot.megaeth.com/rpc
+# MEGA_CHAIN_ID=6342
 
-# ========== MAINNET: POLYGON (opsional) ==========
+
+# ==========================================
+# 💎 (Opsional) MAINNET: POLYGON
+# ==========================================
 # Digunakan saat --network polygonMainnet
-POLYGON_RPC_HTTP=https://polygon-rpc.com
-POLYGON_CHAIN_ID=137
+# POLYGON_RPC_HTTP=https://polygon-rpc.com
+# POLYGON_CHAIN_ID=137
 
-# ========== (opsional) VERIFICATION KE SCAN ==========
-# Jika nanti ingin verifikasi kontrak via plugin hardhat-etherscan:
-# ETHERSCAN_API_KEY=your_etherscan_api_key
+
+# ==========================================
+# (Opsional) VERIFICATION KE SCAN
+# ==========================================
+# Jika ingin verifikasi kontrak via Hardhat Etherscan Plugin:
 # POLYGONSCAN_API_KEY=your_polygonscan_api_key
-
+# ETHERSCAN_API_KEY=your_etherscan_api_key
