--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,32 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1"
+once_cell = "1"
+
+# Ethereum (tidak diubah)
 ethabi = "18"
 ethereum-types = "0.14"
 sha3 = "0.10"
 hex = "0.4"
-anyhow = "1"        # <— Wajib (dipakai di main.rs, ffmpeg.rs, db.rs, dll)
-once_cell = "1"     # <— Wajib (dipakai untuk cache harga)
 
-
-# ethers v2 — fitur yang valid
+# Ethers v2 (ws + rustls)
 ethers = { version = "2.0.14", default-features = false, features = ["rustls", "ws"] }
 
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net", "io-util", "signal"] }
 tokio-stream = "0.1"
+tokio-util = { version = "0.7", features = ["io"] }
+
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 
 axum = { version = "0.7", features = ["multipart"] }
 tower-cookies = "0.10"
-tower-http = { version = "0.5", features = ["fs"] }
+tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
 
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-uuid = { version = "1", features = ["v4", "fast-rng"] }
+uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
 argon2 = "0.5"
 hmac = "0.12"
@@ -33,8 +37,9 @@ sha2 = "0.10"
 base64 = "0.22"
 base64ct = "=1.6.0"
 regex = "1"
-
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net"] }
+infer = "0.15"          # <- sniff konten file untuk validasi MIME
+bytesize = "1.3"        # <- logging size nice human
+num_cpus = "1.16"       # <- pilih thread ffmpeg
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -50,6 +55,7 @@ sqlx = { version = "0.7", features = [
 bigdecimal = "0.4"
 
 dotenvy = "0.15"
+thiserror = "1.0"
 
 [features]
 x402-watcher = []
